adjusted vector implementation, adjusted vectorTests according to the interface changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ set(
         ndarray/ndarray.c
         vector/vector.h
         vector/vector.c
+        utils/dataArena.h
+        utils/dataArena.c
         vector/vectorTests.c
 )
 
