added string utils and display functions for complex and vector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,8 @@ add_executable(LEIBNITZ main.c
         common/doubleLinkedList.c
         utils/dataArena.c
         utils/dataArena.h
+        common/string.c
+        common/string.h
 )
 
 
