Fixed numerous bugs within double linked list structure. Fixed bug caused by nested macro indexing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(LEIBNITZ LANGUAGES C VERSION 0.0.1)
 set(CMAKE_BUILD_TYPE Debug)
 
 set(CMAKE_C_FLAGS "-Wall -Werror -Wpedantic")
-set(CMAKE_C_FLAGS_DEBUG "-O0 -ggdb")
+set(CMAKE_C_FLAGS_DEBUG "-O0 -ggdb3")
 
 set(SRC_DIR ${CMAKE_SOURCE_DIR})
 # Complex includes
